package flight.reservation.plane;

public interface Aircraft {
    String getModel();
    int getPassengerCapacity();
    int getCrewCapacity();
}
